CalcBeam for only 1 scorer

--- a/src/amun/CMakeLists.txt
+++ b/src/amun/CMakeLists.txt
@@ -77,6 +77,7 @@ set_source_files_properties( common/loader_factory.cpp
 cuda_add_executable(
   amun
   common/decoder_main.cpp
+  gpu/decoder/best_hyps.cu  
   gpu/decoder/encoder_decoder.cu
   gpu/decoder/encoder_decoder_loader.cu
   gpu/decoder/encoder_decoder_state.cu
@@ -101,6 +102,7 @@ if(PYTHONLIBS_FOUND)
 cuda_add_library(python SHARED
   python/amunmt.cpp
   # gpu/decoder/ape_penalty.cu
+  gpu/decoder/best_hyps.cu  
   gpu/decoder/encoder_decoder.cu
   gpu/decoder/encoder_decoder_loader.cu
   gpu/decoder/encoder_decoder_state.cu
@@ -127,6 +129,7 @@ cuda_add_library(mosesplugin STATIC
   #plugin/nbest.cu
   plugin/nmt.cu
   plugin/neural_phrase.cpp
+  gpu/decoder/best_hyps.cu  
   gpu/decoder/encoder_decoder.cu
   gpu/decoder/encoder_decoder_loader.cu
   gpu/decoder/encoder_decoder_state.cu
