--- a/contrib/other-builds/amunmt/.project
+++ b/contrib/other-builds/amunmt/.project
@@ -141,6 +141,16 @@
 			<locationURI>PARENT-3-PROJECT_LOC/src/amun/common/base_matrix.h</locationURI>
 		</link>
 		<link>
+			<name>src/amun/common/beam.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/src/amun/common/beam.cpp</locationURI>
+		</link>
+		<link>
+			<name>src/amun/common/beam.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/src/amun/common/beam.h</locationURI>
+		</link>
+		<link>
 			<name>src/amun/common/config.cpp</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/src/amun/common/config.cpp</locationURI>
