--- a/src/amun/CMakeLists.txt
+++ b/src/amun/CMakeLists.txt
@@ -11,6 +11,7 @@ list(APPEND SOURCES "${CMAKE_CURRENT_BINARY_DIR}/common/git_version.cpp")
 add_library(cpumode OBJECT
   cpu/mblas/matrix.cpp
   cpu/mblas/phoenix_functions.cpp
+  cpu/decoder/best_hyps.cpp
   cpu/decoder/encoder_decoder.cpp
   cpu/decoder/encoder_decoder_state.cpp
   cpu/decoder/encoder_decoder_loader.cpp
@@ -43,6 +44,7 @@ add_library(cpumode OBJECT
 add_library(libcommon OBJECT
   ${CMAKE_CURRENT_BINARY_DIR}/common/git_version.cpp
   common/base_matrix.cpp
+  common/beam.cpp
   common/config.cpp
   common/exception.cpp
   common/filter.cpp
