begin making beamSizes a class

--- a/src/amun/CMakeLists.txt
+++ b/src/amun/CMakeLists.txt
@@ -45,6 +45,7 @@ add_library(libcommon OBJECT
   ${CMAKE_CURRENT_BINARY_DIR}/common/git_version.cpp
   common/base_matrix.cpp
   common/beam.cpp
+  common/beam_size.cpp
   common/config.cpp
   common/exception.cpp
   common/filter.cpp
