--- a/contrib/other-builds/amunmt/.project
+++ b/contrib/other-builds/amunmt/.project
@@ -1531,6 +1531,16 @@
 			<locationURI>PARENT-3-PROJECT_LOC/src/amun/gpu/dl4mt/model.h</locationURI>
 		</link>
 		<link>
+			<name>src/amun/gpu/mblas/enc_params_gpu.cu</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/src/amun/gpu/mblas/enc_params_gpu.cu</locationURI>
+		</link>
+		<link>
+			<name>src/amun/gpu/mblas/enc_params_gpu.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/src/amun/gpu/mblas/enc_params_gpu.h</locationURI>
+		</link>
+		<link>
 			<name>src/amun/gpu/mblas/handles.cu</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/src/amun/gpu/mblas/handles.cu</locationURI>
