--- a/contrib/other-builds/amunmt/.project
+++ b/contrib/other-builds/amunmt/.project
@@ -176,14 +176,14 @@
 			<locationURI>PARENT-3-PROJECT_LOC/src/amun/common/decoder_main.cpp</locationURI>
 		</link>
 		<link>
-			<name>src/amun/common/enc_params.cpp</name>
+			<name>src/amun/common/enc_out.cpp</name>
 			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/src/amun/common/enc_params.cpp</locationURI>
+			<locationURI>PARENT-3-PROJECT_LOC/src/amun/common/enc_out.cpp</locationURI>
 		</link>
 		<link>
-			<name>src/amun/common/enc_params.h</name>
+			<name>src/amun/common/enc_out.h</name>
 			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/src/amun/common/enc_params.h</locationURI>
+			<locationURI>PARENT-3-PROJECT_LOC/src/amun/common/enc_out.h</locationURI>
 		</link>
 		<link>
 			<name>src/amun/common/exception.cpp</name>
@@ -1476,14 +1476,14 @@
 			<locationURI>PARENT-3-PROJECT_LOC/src/amun/gpu/decoder/buffer.h</locationURI>
 		</link>
 		<link>
-			<name>src/amun/gpu/decoder/enc_params_gpu.cu</name>
+			<name>src/amun/gpu/decoder/enc_out_gpu.cu</name>
 			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/src/amun/gpu/decoder/enc_params_gpu.cu</locationURI>
+			<locationURI>PARENT-3-PROJECT_LOC/src/amun/gpu/decoder/enc_out_gpu.cu</locationURI>
 		</link>
 		<link>
-			<name>src/amun/gpu/decoder/enc_params_gpu.h</name>
+			<name>src/amun/gpu/decoder/enc_out_gpu.h</name>
 			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/src/amun/gpu/decoder/enc_params_gpu.h</locationURI>
+			<locationURI>PARENT-3-PROJECT_LOC/src/amun/gpu/decoder/enc_out_gpu.h</locationURI>
 		</link>
 		<link>
 			<name>src/amun/gpu/decoder/encoder_decoder.cu</name>
