--- a/contrib/other-builds/amunmt/.project
+++ b/contrib/other-builds/amunmt/.project
@@ -1486,6 +1486,16 @@
 			<locationURI>PARENT-3-PROJECT_LOC/src/amun/gpu/decoder/buffer.h</locationURI>
 		</link>
 		<link>
+			<name>src/amun/gpu/decoder/enc_out_buffer.cu</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/src/amun/gpu/decoder/enc_out_buffer.cu</locationURI>
+		</link>
+		<link>
+			<name>src/amun/gpu/decoder/enc_out_buffer.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/src/amun/gpu/decoder/enc_out_buffer.h</locationURI>
+		</link>
+		<link>
 			<name>src/amun/gpu/decoder/enc_out_gpu.cu</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/src/amun/gpu/decoder/enc_out_gpu.cu</locationURI>
