--- a/contrib/other-builds/amunmt/.project
+++ b/contrib/other-builds/amunmt/.project
@@ -1526,6 +1526,16 @@
 			<locationURI>PARENT-3-PROJECT_LOC/src/amun/gpu/dl4mt/model.h</locationURI>
 		</link>
 		<link>
+			<name>src/amun/gpu/mblas/half.cu</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/src/amun/gpu/mblas/half.cu</locationURI>
+		</link>
+		<link>
+			<name>src/amun/gpu/mblas/half.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/src/amun/gpu/mblas/half.h</locationURI>
+		</link>
+		<link>
 			<name>src/amun/gpu/mblas/handles.h</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/src/amun/gpu/mblas/handles.h</locationURI>
