add external tools to installation targets

--- a/src/amun/3rd_party/extract_lex/CMakeLists.txt
+++ b/src/amun/3rd_party/extract_lex/CMakeLists.txt
@@ -4,3 +4,5 @@ add_executable(extract_lex
 
 target_link_libraries(extract_lex ${EXT_LIBS})
 set_target_properties(extract_lex PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
+
+install(TARGETS "extract_lex" RUNTIME DESTINATION bin)
