--- a/src/amun/3rd_party/fast_align/CMakeLists.txt
+++ b/src/amun/3rd_party/fast_align/CMakeLists.txt
@@ -20,3 +20,6 @@ add_executable(atools src/alignment_io.cc src/atools.cc)
 
 set_target_properties(fast_align PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
 set_target_properties(atools PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
+
+install(TARGETS "atools" RUNTIME DESTINATION bin)
+install(TARGETS "fast_align" RUNTIME DESTINATION bin)
